css3 selecter study

--- a/qianfeng/03_css/html/index14.html
+++ b/qianfeng/03_css/html/index14.html
@@ -17,6 +17,7 @@
 			 div[class|='a'] {margin: 0 auto;} //以 a-啥开头 a需要是独立
 			 div[class^='haha'] {margin: 0 auto;} //以haha开头
 			 div[class$='xixi'] {margin: 0 auto;} //以xixi结尾
+			 div[class*='gogo'] {margin: 0 auto;} //只要class中包含有gogo的都会有效
 		</style>
 	</head>
 	<body>
