css lesson studys

--- a/lessons/html/one/index.html
+++ b/lessons/html/one/index.html
@@ -23,7 +23,10 @@
         <div>
             <p class="warming">This is a tips paragraph!</p>
             <span class="warming">what are you talking about ?</span>
-            <a href="https://sifangti.club" title="四方体科技有限公司">四方体</a>
+            <a href="sifangti.club" title="四方体科技有限公司">四方体</a>
+            <p lang="en">浪浪浪</p>
+            <p lang="en-us">哈哈哈</p>
+            <h1 lang="english">浪浪浪哈哈哈哈</h1>
         </div>
     </body>
 </html>
